# FairyAction

./: .env  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  package.json
.github/workflows/: ci.yml  release.yml
crates/fa-actor/: Cargo.toml
crates/fa-actor/src/: element.rs  lib.rs  mouse.rs  page.rs
crates/fa-agent/: Cargo.toml
crates/fa-agent/src/: lib.rs  service.rs  views.rs
crates/fa-bridge/: Cargo.toml
crates/fa-bridge-sdk/: Cargo.toml  README.md
crates/fa-bridge-sdk/src/: context.rs  error.rs  lib.rs  oneshot.rs  persistent.rs  types.rs
crates/fa-bridge/src/: error.rs  frame.rs  lib.rs  message.rs
crates/fa-browser/: Cargo.toml
crates/fa-browser/src/: cdp.rs  events.rs  lib.rs  profile.rs  session.rs  state.rs
crates/fa-cli/: Cargo.toml
crates/fa-cli/src/: main.rs
crates/fa-config/: Cargo.toml
crates/fa-config/src/: config.rs  error.rs  lib.rs
crates/fa-dom/: Cargo.toml
crates/fa-dom/src/: lib.rs  serializer.rs  service.rs  views.rs
crates/fa-fap/: Cargo.toml
crates/fa-fap/src/: error.rs  invoke.rs  lib.rs  manifest.rs  pack.rs  package.rs  parser.rs  permission.rs  platform.rs  process.rs  process_pool.rs  sign.rs  version.rs
crates/fa-llm/: Cargo.toml
crates/fa-llm/src/: base.rs  error.rs  factory.rs  lib.rs  messages.rs  models.rs  openai.rs
crates/fa-tester/: Cargo.toml
crates/fa-tester/src/: main.rs
crates/fa-tools/: Cargo.toml
crates/fa-tools/src/: actions.rs  extract_search_results.rs  fap_actions.rs  lib.rs  params.rs  registry.rs
docs/: FAP 开发者指南.md  FairyAction集成指南.md  fap-developer-guide.md
