[package]
name = "fa-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Agent core (step loop, state management) for FairyAction"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
fa-browser = { workspace = true }
fa-dom = { workspace = true }
fa-llm = { workspace = true }
fa-tools = { workspace = true }
fa-config = { workspace = true }
fa-actor = { workspace = true }
