[package]
name = "fa-dom"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "DOM processing pipeline for FairyAction"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
fa-browser = { workspace = true }
