[package]
name = "fa-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "LLM integration layer for FairyAction"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
fa-config = { workspace = true }
