[package]
name = "fa-tester"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Interactive TUI browser tester for FairyAction"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
fa-browser = { workspace = true }
fa-dom = { workspace = true }
fa-config = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
unicode-width = "0.2"
