[package]
name = "fa-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Action registry and execution system for FairyAction"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
fa-browser = { workspace = true }
fa-actor = { workspace = true }
fa-dom = { workspace = true }
fa-bridge = { workspace = true }
fa-fap = { workspace = true }
fa-config = { workspace = true }
